Bumper nimbus, graphql, mockito, slf4j, swagger, jaxws-rt